# minilang

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: architecture.md  grammar.md
examples/: 01_arith.ml  02_fib.ml  03_loop.ml  04_dead.ml  05_invariant.ml
include/: ast.h  codegen.h  lexer.h  parser.h
include/jit/: KaleidoscopeJIT.h
include/passes/: ConstFoldPass.h  DCEPass.h  LICMPass.h
src/: codegen.cpp  lexer.cpp  main.cpp  parser.cpp
src/passes/: ConstFoldPass.cpp  DCEPass.cpp  LICMPass.cpp
tests/: run_all.sh
tests/e2e/: 01_arith.ml  02_fib.ml  03_sum.ml
tests/integration/: 01_arith.ml  04_dead.ml  05_invariant.ml
tests/unit/: codegen_test.cpp  lexer_test.cpp  parser_test.cpp
